Added Fluent Ribbon and Exit Button

--- a/RocketSimWpf.csproj
+++ b/RocketSimWpf.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Fluent.Ribbon" Version="11.0.1" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     <!-- Add explicit reference to Libuv to control its version -->
